# text-processing

./: CMakeLists.txt  alpha_counter.c  alpha_counter.h  converter.c  converter.h  delete.c  delete.h  delete_odd_letter.c  delete_odd_letter.h  from_string_to_date.c  from_string_to_date.h  len_last_word_sort.c  len_last_word_sort.h  main.c  out_put_date.c  out_put_date.h  printer.c  printer.h  readSentence.c  readSentence.h  structSentence.h  structText.h  test  test.c
